12_playground/_archive/Elements/Oxygen/hello-service/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxygen
  namespace: chemicals
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oxygen
  template:
    metadata:
      labels:
        app: oxygen
    spec:
      containers:
      - name: oxygen
        image: roskenet/hello-service:0.0.1
        ports:
        - name: api
          containerPort: 8080
