12_playground/_archive/Elements/Oxygen/hello-service/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxygen
  namespace: chemicals
spec:
  selector:
    app: oxygen
  ports:
  - protocol: TCP
    port: 8080
    targetPort: api
