12_playground/_archive/Elements/Oxygen/hello-service/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oxygen
  namespace: chemicals
spec:
  rules:
  - host: oxygen.minikube
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: oxygen
            port: 
              name: api
